Bug 543813 - "Attachments with "Content-Type:" line containing a line break are not processed properly". Patch v2 (with review change). [r=asuth, sr+a-thunderbird3.1=bienvenu]